--- a/RealityKitApp.xcworkspace/xcshareddata/xcschemes/Generate Project.xcscheme
+++ b/RealityKitApp.xcworkspace/xcshareddata/xcschemes/Generate Project.xcscheme
@@ -19,7 +19,7 @@
       disablePerformanceAntipatternChecker = "YES"
       launchStyle = "0"
       useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "/Users/yasmin-carloto/Documents/projetos/RealityKitApp"
+      customWorkingDirectory = "/Users/yasmin-carloto/Documents/Documentos - MacBook Pro de Yasmin/projetos/3D-Hand-POC"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
